tests/fixtures/invalid/pow_int_str_str.py
# Cannot call pow() with Int, Str, Str
x = pow(1, "hello", "hello")
